--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -369,6 +369,31 @@ button {
  
 }
 
+#emask{
+  background: rgba(0,0,0,0.4);
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  z-index: 20;
+  & .follow-modal{
+    // position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    .modal-btn{
+      border: solid 1px black;
+      width:150px;
+      border-radius: 5px;
+      cursor: pointer;
+      text-align: center;
+      margin: 0 auto 20px;
+      color:black;
+    }
+  }
+}
+
 
 
 .event-modal{
@@ -376,7 +401,7 @@ button {
   width: 600px;
   padding: 20px;
   position: absolute;
-  top: 129px;
+  top: 66px;
   right: 6%;
   margin: 0 auto;
   -webkit-transition: all 0.4s;
@@ -439,7 +464,6 @@ button {
       width:80px;
     }
     & :first-child{
-    //  width: 80px;
      display: inline-block; 
     }
     & input[type="text"] {
@@ -838,11 +862,6 @@ header{
       &:nth-child(5){
         animation-delay:.8s ;
       }
-      
-      // &:nth-child(8){
-        //   animation-delay:1.2s ;
-        //   transform: rotate(-15deg);
-        // }
     }
   }
 }
@@ -1060,13 +1079,17 @@ header{
   padding-top:20px;
   background-color: $green;
   position: relative;
-  // height: 2000px;
   h3{
     margin: 20px 0 0 0;
   }
   li{
     height: 100%;
     text-align: center;
+    & a{
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
   & .g-page-title{
     margin:0 0 10px 30px;
@@ -1154,16 +1177,15 @@ header{
     }
     & #edit-btn{
       margin: 0 auto;
-    width: 100px;
-    font-size: 14px;
-    background-color: green;
-    height: 50px;
-    border-radius:22px;
+      width: 100px;
+      font-size: 14px;
+      background-color: green;
+      height: 50px;
+      border-radius:22px;
     }
   }
 }
 .profile{
-  // padding-right: 30px;
   text-align: center;
   // outline: solid;
   flex:.8;
@@ -1225,7 +1247,6 @@ header{
 }
 
 .event-display{
-  // outline: solid;
   flex:1;
 }
 // タブメニュー
@@ -1266,6 +1287,7 @@ header{
   & p{
     display: inline-block;
     line-height: 50px;
+    color:black;
   }
   a {
     line-height: 50px;
@@ -1277,6 +1299,10 @@ header{
       white-space: nowrap;
       overflow: hidden;
     }
+  }
+  img{
+    width:55px;
+    display: block;
   }
   & .follow-btn{
     border:solid 1px black;
@@ -1291,7 +1317,12 @@ header{
     cursor: pointer;
   }
 }
-
+.self-event{
+  background-color: yellow;
+}
+.self-stand-event{
+  background-color: gainsboro;
+}
 
 
 .content.active{
@@ -1320,6 +1351,7 @@ header{
     padding: 20px 0 0 0;
     color: grey;
   }
+  
   h2{
     margin: 0;
     padding: 0 0 20px 0;
@@ -1339,10 +1371,29 @@ header{
     background-color: orange;
     
   }
+  button.btn-res{
+    background-color: orange;
+    & a{
+      color:black;
+    }
+  
+   
+  }
   
   .event-title-right{
+    margin-right: 60px ;
     display: flex;
     align-items: center;
+    button.btn-tog{
+      background-color: $pink;
+      a {
+        color:black;
+        font-size: 14px;
+      }
+      a.schedule-del-btn{
+        color: antiquewhite;
+      }
+    }
   }
 
 }
@@ -1350,7 +1401,7 @@ header{
   width:100vw;
   background-color: white;
   position: fixed;
-  z-index: 20;
+  z-index: 10;
   top:122px;
   opacity: 0;
   transition: .3s;
@@ -1360,36 +1411,57 @@ header{
     margin:0 auto;
     display:flex;
     justify-content: space-between;
-    .edit-link{
-      padding:17px 0;
-      a{
-        display: inline-block;
-        margin-right: 30px;
-      }
-    }
     h2{
       margin: 0;
     }
     p{
       color:grey;
     }
+    .edit-link{
+      padding:17px 0;
+      margin-right: 60px;
+
+      a{
+        display: inline-block;
+      }
+      & button.btn-edit{
+        background-color:yellow;
+        margin-right: 30px;
+    }
     button{
       width: 87px;
       border-radius: 8px;
-      height: 30px;
+      height: 33px;
       border: 1px solid black;
       color:black;
      
   
     }
-    button.btn-edit{
-      background-color:yellow;
+    
    
     
     }
     button.btn-pub{
       background-color: orange;
      
+    }
+    button.btn-res{
+      background-color: orange;
+      & a{
+        color:black;
+        margin: 0;
+      }
+    }
+    button.btn-tog{
+      background-color: $pink;
+      padding: 0;
+      a {
+        color:black;
+        font-size: 10px;
+      }
+      a.schedule-del-btn{
+        color: antiquewhite;
+      }
     }
   } 
 }
@@ -1404,6 +1476,19 @@ header{
   & p {
     line-height: 50px;
     padding: 0 0 0 20px;
+  }
+  .unlock-btn,
+  .follow-btn{
+    cursor: pointer;
+    line-height: 50px;
+    margin-left: 60px;
+    background: goldenrod;
+    color: white;
+    border-radius: 30px;
+    padding: 0 10px
+  }
+  .follow-btn:hover{
+    opacity: .7;
   }
 }
 .event-plofile-img{
@@ -1471,7 +1556,7 @@ header{
     flex:1;
     position: relative;
     width: 360px;
-    outline: solid;
+    // outline: solid;
   }
   .event-content-right{
     
@@ -1479,18 +1564,31 @@ header{
     top:200px;
     .event-user-block{
       background-color: white;
-      width: 360px;
+      width: 330px;
       margin-bottom: 20px;
       border-radius: 8px;
+      padding: 30px;
       & .event-user-plofile {
-        padding: 30px;
       }
     }
     .event-data-block{
       background-color: white;
-      width: 360px;
+      width: 330px;
       border-radius: 8px;
-      padding: 60px 0;
+      padding: 30px;
+      p{
+        color: gray;
+      }
+      p.genre_name{
+        margin-right: 20px;
+        display: inline-block;
+        font-size: .8em;
+      }
+      p.feel_name{
+        padding: 0;
+        display: inline-block;
+        font-size: .8em;
+      }
     }
     span {
       position: absolute;
@@ -1549,9 +1647,87 @@ header{
   }
 }
 
+.event-body-section{
+  // position: relative;
+  width:1100px;
+  margin:0 auto;
+  border-top: 2px solid rgb(193, 191, 187);
+  display: flex;
+  button{
+    margin-left: auto;
+    display: block;
+    background-color: goldenrod;
+  }
+  
+  .schedule-section{
+    margin-bottom: 26px;
+    flex: 1.7;
+    .scheduling_users{
+      display: flex;
+      flex-wrap: wrap;
+      .scheduling_user{
+        width: 158px;
+        background: white;
+        border-radius: 15px;
+        margin-right: 8px;
+        text-align: center;
+        padding: 20px 0;
+        margin-bottom: 10px;
+        img{
+          width: 90px;
+          border-radius: 15px;
+          margin-bottom: 10px;
+        }
+        p{
+          margin-bottom: 10px;
+        }
+      }
+      
+    }
+  }
+  .event-operation{
+    flex: 1;
+  }
+
+}
 
 
 
+#event-delete-modal{
+  width: 290px;
+  padding: 39px;
+  border-radius: 50px;
+  position:absolute;
+  z-index: 30;
+  height: 178px;
+  background: #fff;
+  left:50%;
+  top:-110px;
+  transform:translateX(-50%);
+  p {
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+  button{
+    margin: 0 auto;
+    width: 151px;
+    height: 50px;
+  }
+  button#delete-modal-exit{
+    margin-top: 10px;
+  }
+}      
+#delete-modal-mask{
+  background: rgba(0,0,0,0.4);
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  z-index: 25;
+}  
+    
+      
 
 
 
