--- a/app/views/users/show_our.html.erb
+++ b/app/views/users/show_our.html.erb
@@ -35,7 +35,7 @@
       </ul>
       <section class="content active" id="follow">
         <% if following.count == 0 %>
-          フォロワーはいません
+          フォロー中はいません
         <% else %>
           <% following.each do |user| %>
             <div class="follower_view">
