--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,11 +13,26 @@
       </div>
     <% end %>
   </div>
+
   <div class="event-title-right">
-    <%= link_to update_event_path do %>
-      <button class="btn-edit">編集</button>
+    <% if current_user.id == @event.user_id %>
+      <% if @event.publish %>
+        <%= link_to event_path(@event.id, event:{publish: false}), method: :put do %>
+          <button class="btn-can">取下げ</button>
+        <% end %>
+      <% else %>
+        <%= link_to update_event_path do %>
+          <button class="btn-edit">編集</button>
+        <% end %>
+        <%= link_to event_path(@event.id, event: {publish: true}), method: :put do %>
+            <button class="btn-res">掲載</button>
+        <% end %>
+      <% end %>
+    <% else %>
+          <button class="btn-tog"><%= render 'schedules/schedule', event: @event %></button>
     <% end %>
-    <button class="btn-pul">取下げ</button>
+   
+ 
   </div>
 </div>
 <div id="fixed-navbar">
@@ -27,13 +42,25 @@
       <p><%= @event.date %></p>
     </div>
     <div class="edit-link">
-      <%= link_to update_event_path do %>
-        <button class="btn-edit">編集</button>
+      <% if current_user.id == @event.user_id %>
+        <% if @event.publish %>
+          <%= link_to event_path(@event.id, event:{publish: false}), method: :put do %>
+            <button class="btn-can">取下げ</button>
+          <% end %>
+        <% else %>
+          <%= link_to update_event_path do %>
+            <button class="btn-edit">編集</button>
+          <% end %>
+          <%= link_to event_path(@event.id, event: {publish: true}), method: :put do %>
+              <button class="btn-res">掲載</button>
+          <% end %>
+        <% end %>
+      <% else %>
+            <button class="btn-tog"><%= render 'schedules/schedule', event: @event %></button>
       <% end %>
-      <button class="btn-pul">取下げ</button>
+
+  
     </div>
-  </div>
-  <div class="event-title-right">
   </div>
 </div>
 <div class="event-contents-section">
@@ -46,23 +73,16 @@
           <%= image_tag @event.event_image_name.url %>
         <% end %>
       </div>
-      <%# <div class="event-title">
-        <h2><%= @event.event_title %.
-        ></h2>
-      </div> %>
+
       <div class="event-text">
         <h3>詳細</h3>
         <p><%= safe_join(@event.content.to_s.split("\n"),tag(:br)) %></p>
       </div>
       <div>
-        参加者一覧
         レター機能
         主とやりとりできる。
         レターの中に何を込めるかは自由
 
-        <p><%= @event.genre.genre_title %></p>
-        <p><%= @event.date %></p>
-        <p><%= @event.user.name %></p>
       </div>
     </div>
     <div id="event-nav-right">
@@ -75,11 +95,30 @@
               <img src="<%= @event.user.image_name %>" class="event-plofile-img">
             <% end %>
             <p><%= @event.user.name %></p>
+            
+            <% unless @event.user == current_user %>
+              <% if current_user.following?(@event.user) %>
+                <div class="unlock-btn">フォロー解除</div>
+              <% else %>
+                <%= link_to follow_path(@event.user), method: :post, remote: true do %> 
+                  <div class="follow-btn">フォローする</div>
+                <% end %>
+              <% end %>
+            <% end %>
           </div>
         </div>
+       
+
+
         <div class="event-data-block">
-          日時
-          場所
+          <div>
+            <p class="genre_name">ジャンル:<%= @event.genre.genre_title %></p>
+            <% if @event.feel.present? %>
+              <p class="feel_name">気分:<%= @event.feel.feel_title %></p>
+            <% end %>
+          </div>
+            <p>日時:<%= @event.date %></p>
+            <p>場所:<%= @event.place %></p>
         </div>
         <%# <span>サムネイルプレビュー</span>
         <div class="event-thumbnail">
@@ -95,9 +134,45 @@
             <p><%= @event.content %/></p>
           </div>
         </div>  %>
+      </div>
+    </div>
+  </div>
+  <div class="event-body-section">
+    <div class="schedule-section">
+      <p>参加者一覧</p>
+      <div class="scheduling_users">
+
+        <%= render partial: "events/users", collection: @scheduling_users %>
 
       </div>
     </div>
+
+    <div class="event-operation">
+      <% if current_user.id == @event.user_id %>
+          <button id="event-delete">イベント削除</button>
+      <% end %>
+      <% if current_user.id == @event.user_id %>
+        <div id="event-delete-modal" class="hidden" >
+          <p>本当に削除してもよろしいですか？</p>
+            <%= link_to "/events/#{@event.id}", method: :DELETE do %>
+              <button>削除</button>
+            <% end %>
+          <button id="delete-modal-exit">戻る</button>
+        </div>
+        <div id="delete-modal-mask" class="hidden"></div>
+      <% end %>
+    </div>
+  </div>
+
+</div>
+
+<div id="emask" class="hidden">
+  <div class="follow-modal hidden">
+    <p><%= @event.user.name %>さんのフォローを解除しますか？</p>
+    <%= link_to unfollow_path(@event.user), method: :post, remote: true do %> 
+      <div class="modal-btn">フォロー解除</div>
+    <% end %>
+    <div class="modal-btn cancel">キャンセル</div>
   </div>
 </div>
 
@@ -105,24 +180,42 @@
 
 
 <script>
+
+
+
+  $(document).on('turbolinks:load', function(){
+    const unlock_btn = document.querySelector('.unlock-btn');
+    const cancel = document.querySelector('.cancel');
+    if(unlock_btn){
+      unlock_btn.addEventListener('click',()=>{
+        notScroll();
+        document.querySelector('.follow-modal').classList.remove('hidden');
+        document.getElementById('emask').classList.remove('hidden');
+      });
+    }
+    if(cancel){
+      cancel.addEventListener('click', ()=>{
+        $('body').attr('style', '');
+        $('header').attr('style', '');
+        $('html, body').prop({scrollTop: posi});
+        document.querySelector('.follow-modal').classList.add('hidden');
+        document.getElementById('emask').classList.add('hidden');
+      });
+    }
+  });
+
+
+
+
 function FixedVar() {
   let scroll = $(window).scrollTop();
-  console.log(scroll);
+  // console.log(scroll);
   if (scroll >= 180){//headerの高さ以上になったら
       $('#fixed-navbar').addClass('varopen');
       // $('.event-content-right').addClass('fixed');
     }else{//それ以外は
       $('#fixed-navbar').removeClass('varopen');
-      
     }
-  // if (scroll >= 140 && scroll < 400){
-  //   $('.event-content-right').addClass('fixed');
-  // }else if(scroll >= 400){
-  //   $('.event-content-right').removeClass('fixed');
-  //   $('.event-content-right').css({'position':'absolute','top':'400px'});
-  // }else{
-  //   $('.event-content-right').removeClass('fixed');
-  // }
 }
 $(window).scroll(function () {
   FixedVar();/* スクロール途中からヘッダーを出現させる関数を呼ぶ*/
@@ -132,6 +225,22 @@ $(window).scroll(function () {
 $(window).on('load', function () {
   FixedVar();/* スクロール途中からヘッダーを出現させる関数を呼ぶ*/
 });
+
+
+$('#event-delete').click(function(){
+  $('#event-delete-modal').removeClass('hidden');
+  $('#delete-modal-mask').removeClass('hidden');
+  notScroll();
+});
+$('#delete-modal-exit').click(function(){
+  $('#event-delete-modal').addClass('hidden');
+  $('#delete-modal-mask').addClass('hidden');
+  $('body').attr('style', '');
+  $('header').attr('style', '');
+  $('html, body').prop({scrollTop: posi});
+});
+
+
 
 
 </script>
