--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,7 +29,7 @@
         <% end %>
       <% end %>
     <% else %>
-          <button class="btn-tog"><%= render 'schedules/schedule', event: @event %></button>
+      <button class="btn-tog"><%= render 'schedules/schedule', event: @event %></button>
     <% end %>
    
  
@@ -56,13 +56,12 @@
           <% end %>
         <% end %>
       <% else %>
-            <button class="btn-tog"><%= render 'schedules/schedule', event: @event %></button>
+        <button class="btn-tog"><%= render 'schedules/schedule', event: @event %></button>
       <% end %>
-
-  
     </div>
   </div>
 </div>
+
 <div class="event-contents-section">
   <div class="event-top-section">
     <div class="event-content-left">
@@ -73,7 +72,6 @@
           <%= image_tag @event.event_image_name.url %>
         <% end %>
       </div>
-
       <div class="event-text">
         <h3>詳細</h3>
         <p><%= safe_join(@event.content.to_s.split("\n"),tag(:br)) %></p>
@@ -82,11 +80,30 @@
         レター機能
         主とやりとりできる。
         レターの中に何を込めるかは自由
-
       </div>
     </div>
+
     <div id="event-nav-right">
       <div class="event-content-right">
+        <% unless @event.publish %>
+          <div class="event-user-block">
+            <span>サムネイルプレビュー</span>
+            <div class="event-thumbnail">
+              <div class="event-thumb-image">
+                <% if @event.event_image_name.size == 0 %>
+                  <%= image_tag "/assets/catman" %>
+                <% else %>
+                  <%= image_tag @event.event_image_name.url %>
+                <% end %>
+              </div>
+              <div class="event-thumb-text">
+                <h3><%= @event.event_title %></h2>
+                <p><%= @event.content %></p>
+              </div>
+            </div> 
+          </div>
+        <% end %>
+
         <div class="event-user-block">
           <div class="event-user-plofile">
             <% if @event.event_image_name.size == 0 %>
@@ -107,8 +124,6 @@
             <% end %>
           </div>
         </div>
-       
-
 
         <div class="event-data-block">
           <div>
@@ -117,23 +132,9 @@
               <p class="feel_name">気分:<%= @event.feel.feel_title %></p>
             <% end %>
           </div>
-            <p>日時:<%= @event.date %></p>
-            <p>場所:<%= @event.place %></p>
+          <p>日時:<%= @event.date %></p>
+          <p>場所:<%= @event.place %></p>
         </div>
-        <%# <span>サムネイルプレビュー</span>
-        <div class="event-thumbnail">
-          <div class="event-thumb-image">
-            <% if @event.event_image_name.size == 0 %/>
-              <%= image_tag "/assets/catman" %/>
-            <% else %/>
-              <%= image_tag @event.event_image_name.url %/>
-            <% end %/>
-          </div>
-          <div class="event-thumb-text">
-            <h3><%= @event.event_title %/></h2>
-            <p><%= @event.content %/></p>
-          </div>
-        </div>  %>
       </div>
     </div>
   </div>
@@ -141,29 +142,30 @@
     <div class="schedule-section">
       <p>参加者一覧</p>
       <div class="scheduling_users">
-
-        <%= render partial: "events/users", collection: @scheduling_users %>
-
+        <% if @scheduling_users.count == 0 %>
+          <p class="notgest">参加者はいません。</p>
+        <% else %>
+          <%= render partial: "events/users", collection: @scheduling_users %>
+        <% end %>
       </div>
     </div>
 
     <div class="event-operation">
       <% if current_user.id == @event.user_id %>
-          <button id="event-delete">イベント削除</button>
+        <button id="event-delete">イベント削除</button>
       <% end %>
       <% if current_user.id == @event.user_id %>
         <div id="event-delete-modal" class="hidden" >
           <p>本当に削除してもよろしいですか？</p>
-            <%= link_to "/events/#{@event.id}", method: :DELETE do %>
-              <button>削除</button>
-            <% end %>
+          <%= link_to "/events/#{@event.id}", method: :DELETE do %>
+            <button>削除</button>
+          <% end %>
           <button id="delete-modal-exit">戻る</button>
         </div>
         <div id="delete-modal-mask" class="hidden"></div>
       <% end %>
     </div>
   </div>
-
 </div>
 
 <div id="emask" class="hidden">
@@ -178,10 +180,7 @@
 
 
 
-
 <script>
-
-
 
   $(document).on('turbolinks:load', function(){
     const unlock_btn = document.querySelector('.unlock-btn');
@@ -203,8 +202,6 @@
       });
     }
   });
-
-
 
 
 function FixedVar() {
@@ -239,8 +236,6 @@ $('#delete-modal-exit').click(function(){
   $('header').attr('style', '');
   $('html, body').prop({scrollTop: posi});
 });
-
-
 
 
 </script>
