--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,8 @@
       <% end %>
     </div>
   </div>
+
+
   <div class="event-display">
     <div class="event-container">
       <ul class="tab-menu">
@@ -41,14 +43,18 @@
             <div class="follower_view">
               <div class="follower">
                 <%= link_to "/events/#{e.id}" do %>
-                  <p><%= e.event_title %></p>
-                  <p><%= e.date %></p>
-                  <% if e.user.image_name.size == 0 %>
-                    <%= image_tag "/assets/catman" %>
-                  <% else %>
-                    <p><%= e.user.image_name %></p>
-                  <% end %>
-                  <p><%= e.user.name %></p>
+                  <div class="title_date">
+                    <p><%= e.event_title %></p>
+                    <p class="follower-date"><%= e.date %></p>
+                  </div>
+                  <div class="follower-plofile">
+                    <% if e.user.image_name.size == 0 %>
+                      <%= image_tag "/assets/catman" %>
+                    <% else %>
+                      <p><%= e.user.image_name %></p>
+                    <% end %>
+                    <p class="follower-name"><%= e.user.name %></p>
+                  </div>
                 <% end %>
               </div>
             </div>
@@ -63,14 +69,18 @@
             <div class="follower_view">
               <div class="follower self-event">
                 <%= link_to "/events/#{e.id}" do %>
-                  <p><%= e.event_title %></p>
-                  <p><%= e.date %></p>
+                  <div class="title_date">
+                    <p><%= e.event_title %></p>
+                    <p class="follower-date"><%= e.date %></p>
+                  </div>
+                  <div class="follower-plofile">
                     <% if e.user.image_name.size == 0 %>
                       <%= image_tag "/assets/catman" %>
                     <% else %>
                       <p><%= e.user.image_name %></p>
                     <% end %>
-                  <p><%= e.user.name %></p>
+                    <p class="follower-name"><%= e.user.name %></p>
+                  </div>
                 <% end %>
               </div>
             </div>
@@ -79,14 +89,18 @@
             <div class="follower_view">
               <div class="follower self-stand-event">
                 <%= link_to "/events/#{e.id}" do %>
-                  <p><%= e.event_title %></p>
-                  <p><%= e.date %></p>
+                  <div class="title_date">
+                    <p><%= e.event_title %></p>
+                    <p class="follower-date"><%= e.date %></p>
+                  </div>
+                  <div class="follower-plofile">
                     <% if e.user.image_name.size == 0 %>
                       <%= image_tag "/assets/catman" %>
                     <% else %>
                       <p><%= e.user.image_name %></p>
                     <% end %>
-                  <p><%= e.user.name %></p>
+                    <p class="follower-name"><%= e.user.name %></p>
+                  </div>
                 <% end %>
               </div>
             </div>
@@ -97,14 +111,18 @@
               <div class="follower_view">
                 <div class="follower">
                   <%= link_to "/events/#{e.id}" do %>
-                    <p><%= e.event_title %></p>
-                    <p><%= e.date %></p>
-                    <% if e.user.image_name.size == 0 %>
-                      <%= image_tag "/assets/catman" %>
-                    <% else %>
-                      <p><%= e.user.image_name %></p>
-                    <% end %>
-                    <p><%= e.user.name %></p>
+                    <div class="title_date">
+                      <p><%= e.event_title %></p>
+                      <p class="follower-date"><%= e.date %></p>
+                    </div>
+                    <div class="follower-plofile">
+                      <% if e.user.image_name.size == 0 %>
+                        <%= image_tag "/assets/catman" %>
+                      <% else %>
+                        <p><%= e.user.image_name %></p>
+                      <% end %>
+                      <p class="follower-name"><%= e.user.name %></p>
+                    </div>
                   <% end %>
                 </div>
               </div>
